[project]
name = "eps-spine-shared"
version = "0.1.0"
description = "A library to hold code shared by EPS and Spine"
authors = [
    {name = "Jolo Das", email = "jolo.das@nhs.net"},
    {name = "Anthony Brown", email = "anthony.brown8@nhs.net"},
    {name = "Matthew Popat", email = "matthew.popat1@nhs.net"},
    {name = "Phil Gee", email = "phil.gee@nhs.net"},
    {name = "Jack Spagnoli", email = "jack.spagnoli1@nhs.net"},
]
readme = "README.md"
requires-python = "==3.12.12"
dependencies = []

[tool.poetry]
packages = [{include = "eps_spine_shared", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
coverage = "^7.12.0"
flake8 = "^7.0"
flake8-bugbear = "^25.11"
black = "^25.11"
isort = "^7.0"
pre-commit = "^4.0"
pip-licenses = "^5.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["eps_spine_shared"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
max-complexity = 10
